--- a/client/prod/views/login.html
+++ b/client/prod/views/login.html
@@ -1,4 +1,7 @@
 	<h3>Login</h3>
+			<!-- <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div> -->
+			<a href="/auth/facebook">Log in with facebook</a>
+			<!-- <button ng-click=facebookLogin()>Login with facebook</button>	 -->
 	<form>
 		<label>username</label>
 		<input type='text' ng-model='user.username' 	/>
