--- a/client/dev/views/login.html
+++ b/client/dev/views/login.html
@@ -1,6 +1,6 @@
 	<h3>Login</h3>
 			<!-- <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div> -->
-			<a href="/auth/facebook">Log in with facebook</a>
+			<!-- <a href="/auth/facebook">Log in with facebook</a> -->
 			<!-- <button ng-click=facebookLogin()>Login with facebook</button>	 -->
 	<form>
 		<label>username</label>
